--- a/style.css
+++ b/style.css
@@ -11,3 +11,24 @@ body, html {
   background-color: #1e1f1c;
   color: #e8e8e8;
 }
+
+.main
+{
+    width: 100%;
+    height: 100%;
+}
+
+.nav
+{
+    height: 100px;
+    width: 100%;
+    background-color: rgb(75, 146, 75);
+    display: flex;
+    gap: 20px;
+}
+
+.logo img
+{
+    margin-right: 120px;
+    height: 50px;
+}
