--- a/style.css
+++ b/style.css
@@ -1,34 +1,36 @@
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
 }
 
-body, html {
-  width: 100%;
-  min-height: 100%;
-  background-color: #1e1f1c;
-  color: #e8e8e8;
+body,
+html {
+	width: 100%;
+	min-height: 100%;
+	background-color: #1e1f1c;
+	color: #e8e8e8;
+}
+.navbar {
+	background-color: orangered;
+	display: flex;
+	padding: 1rem;
 }
 
-.main
-{
-    width: 100%;
-    height: 100%;
+.logo {
+	font-size: 3rem;
+	font-weight: 700;
 }
 
-.nav
-{
-    height: 100px;
-    width: 100%;
-    background-color: rgb(75, 146, 75);
-    display: flex;
-    gap: 20px;
+nav{
+  display: flex;
+  gap: 1rem;
+
 }
 
-.logo img
-{
-    margin-right: 120px;
-    height: 50px;
+a{
+  color: white;
+  text-decoration: none;
 }
