--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
 	margin: 0;
 	padding: 0;
@@ -16,8 +15,8 @@ html {
 .navbar {
 	display: flex;
 	padding: 1rem;
-  justify-content: space-between;
-  box-shadow: 1px 1px 8px;
+	justify-content: space-between;
+	box-shadow: 1px 1px 8px;
 }
 
 .logo {
@@ -25,20 +24,36 @@ html {
 	font-weight: 700;
 }
 
-nav{
-  gap: 1rem;
+nav {
+	gap: 1rem;
+	display: flex;
+	/* width: 400px; */
+	justify-content: center;
+	align-items: center;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+	opacity: 0.6;
+}
+a:hover {
+	opacity: 1;
+}
+
+.parent {
+	background-color: red;
+  /* width: 50vw; */
+	padding: 2rem;
+  gap: 2rem;
   display: flex;
-  /* width: 400px; */
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-
 }
-
-a{
-  color: white;
-  text-decoration: none;
-  opacity: .6;
-}
-a:hover{
-  opacity: 1;
+.parent div {
+	background-color: yellow;
+	width: 100px;
+  padding: 30px;
+  color: black;
 }
